--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
 
 <head>
 	<meta charset="utf-8">
+	<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/frappe-gantt/dist/frappe-gantt.css"
+/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="theme-color" content="#000000">
 	<!--
